Fix lvl error