@@ -21,11 +21,15 @@ import android.content.Context;
 import android.content.SharedPreferences;
 import android.util.Log;
 
-import com.google.android.vending.licensing.util.URIQueryDecoder;
-
+import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.URLDecoder;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.Vector;
@@ -33,11 +37,11 @@ import java.util.Vector;
 /**
  * Default policy. All policy decisions are based off of response data received
  * from the licensing service. Specifically, the licensing server sends the
- * following information: response validity period, error retry period,
- * error retry count and a URL for restoring app access in unlicensed cases.
+ * following information: response validity period, error retry period, and
+ * error retry count.
  * <p>
  * These values will vary based on the the way the application is configured in
- * the Google Play publishing console, such as whether the application is
+ * the Android Market publishing console, such as whether the application is
  * marked as free or is within its refund period, as well as how often an
  * application is checking with the licensing service.
  * <p>
@@ -47,13 +51,12 @@ import java.util.Vector;
 public class APKExpansionPolicy implements Policy {
 
     private static final String TAG = "APKExpansionPolicy";
-    private static final String PREFS_FILE = "com.google.android.vending.licensing.APKExpansionPolicy";
+    private static final String PREFS_FILE = "com.android.vending.licensing.APKExpansionPolicy";
     private static final String PREF_LAST_RESPONSE = "lastResponse";
     private static final String PREF_VALIDITY_TIMESTAMP = "validityTimestamp";
     private static final String PREF_RETRY_UNTIL = "retryUntil";
     private static final String PREF_MAX_RETRIES = "maxRetries";
     private static final String PREF_RETRY_COUNT = "retryCount";
-    private static final String PREF_LICENSING_URL = "licensingUrl";
     private static final String DEFAULT_VALIDITY_TIMESTAMP = "0";
     private static final String DEFAULT_RETRY_UNTIL = "0";
     private static final String DEFAULT_MAX_RETRIES = "0";
@@ -67,7 +70,6 @@ public class APKExpansionPolicy implements Policy {
     private long mRetryCount;
     private long mLastResponseTime = 0;
     private int mLastResponse;
-    private String mLicensingUrl;
     private PreferenceObfuscator mPreferences;
     private Vector<String> mExpansionURLs = new Vector<String>();
     private Vector<String> mExpansionFileNames = new Vector<String>();
@@ -96,7 +98,6 @@ public class APKExpansionPolicy implements Policy {
         mRetryUntil = Long.parseLong(mPreferences.getString(PREF_RETRY_UNTIL, DEFAULT_RETRY_UNTIL));
         mMaxRetries = Long.parseLong(mPreferences.getString(PREF_MAX_RETRIES, DEFAULT_MAX_RETRIES));
         mRetryCount = Long.parseLong(mPreferences.getString(PREF_RETRY_COUNT, DEFAULT_RETRY_COUNT));
-        mLicensingUrl = mPreferences.getString(PREF_LICENSING_URL, null);
     }
 
     /**
@@ -122,10 +123,8 @@ public class APKExpansionPolicy implements Policy {
      * until
      * <li>GT: the timestamp that the client should ignore retry errors until
      * <li>GR: the number of retry errors that the client should ignore
-     * <li>LU: a deep link URL that can enable access for unlicensed apps (e.g.
-     * buy app on the Play Store)
      * </ul>
-     *
+     * 
      * @param response the result from validating the server response
      * @param rawData the raw server response data
      */
@@ -139,12 +138,10 @@ public class APKExpansionPolicy implements Policy {
             setRetryCount(mRetryCount + 1);
         }
 
-        // Update server policy data
-        Map<String, String> extras = decodeExtras(rawData);
         if (response == Policy.LICENSED) {
+            // Update server policy data
+            Map<String, String> extras = decodeExtras(rawData.extra);
             mLastResponse = response;
-            // Reset the licensing URL since it is only applicable for NOT_LICENSED responses.
-            setLicensingUrl(null);
             setValidityTimestamp(Long.toString(System.currentTimeMillis() + MILLIS_PER_MINUTE));
             Set<String> keys = extras.keySet();
             for (String key : keys) {
@@ -166,12 +163,10 @@ public class APKExpansionPolicy implements Policy {
                 }
             }
         } else if (response == Policy.NOT_LICENSED) {
-            // Clear out stale retry params
+            // Clear out stale policy data
             setValidityTimestamp(DEFAULT_VALIDITY_TIMESTAMP);
             setRetryUntil(DEFAULT_RETRY_UNTIL);
             setMaxRetries(DEFAULT_MAX_RETRIES);
-            // Update the licensing URL
-            setLicensingUrl(extras.get("LU"));
         }
 
         setLastResponse(response);
@@ -182,7 +177,7 @@ public class APKExpansionPolicy implements Policy {
      * Set the last license response received from the server and add to
      * preferences. You must manually call PreferenceObfuscator.commit() to
      * commit these changes to disk.
-     *
+     * 
      * @param l the response
      */
     private void setLastResponse(int l) {
@@ -194,7 +189,7 @@ public class APKExpansionPolicy implements Policy {
     /**
      * Set the current retry count and add to preferences. You must manually
      * call PreferenceObfuscator.commit() to commit these changes to disk.
-     *
+     * 
      * @param c the new retry count
      */
     private void setRetryCount(long c) {
@@ -210,7 +205,7 @@ public class APKExpansionPolicy implements Policy {
      * Set the last validity timestamp (VT) received from the server and add to
      * preferences. You must manually call PreferenceObfuscator.commit() to
      * commit these changes to disk.
-     *
+     * 
      * @param validityTimestamp the VT string received
      */
     private void setValidityTimestamp(String validityTimestamp) {
@@ -236,7 +231,7 @@ public class APKExpansionPolicy implements Policy {
      * Set the retry until timestamp (GT) received from the server and add to
      * preferences. You must manually call PreferenceObfuscator.commit() to
      * commit these changes to disk.
-     *
+     * 
      * @param retryUntil the GT string received
      */
     private void setRetryUntil(String retryUntil) {
@@ -262,7 +257,7 @@ public class APKExpansionPolicy implements Policy {
      * Set the max retries value (GR) as received from the server and add to
      * preferences. You must manually call PreferenceObfuscator.commit() to
      * commit these changes to disk.
-     *
+     * 
      * @param maxRetries the GR string received
      */
     private void setMaxRetries(String maxRetries) {
@@ -285,24 +280,10 @@ public class APKExpansionPolicy implements Policy {
     }
 
     /**
-     * Set the licensing URL that displays a Play Store UI for the user to regain app access.
-     *
-     * @param url the LU string received
-     */
-    private void setLicensingUrl(String url) {
-        mLicensingUrl = url;
-        mPreferences.putString(PREF_LICENSING_URL, url);
-    }
-
-    public String getLicensingUrl() {
-        return mLicensingUrl;
-    }
-
-    /**
      * Gets the count of expansion URLs. Since expansionURLs are not committed
      * to preferences, this will return zero if there has been no LVL fetch
      * in the current session.
-     *
+     * 
      * @return the number of expansion URLs. (0,1,2)
      */
     public int getExpansionURLCount() {
@@ -313,9 +294,10 @@ public class APKExpansionPolicy implements Policy {
      * Gets the expansion URL. Since these URLs are not committed to
      * preferences, this will always return null if there has not been an LVL
      * fetch in the current session.
-     *
+     * 
      * @param index the index of the URL to fetch. This value will be either
      *            MAIN_FILE_URL_INDEX or PATCH_FILE_URL_INDEX
+     * @param URL the URL to set
      */
     public String getExpansionURL(int index) {
         if (index < mExpansionURLs.size()) {
@@ -328,7 +310,7 @@ public class APKExpansionPolicy implements Policy {
      * Sets the expansion URL. Expansion URL's are not committed to preferences,
      * but are instead intended to be stored when the license response is
      * processed by the front-end.
-     *
+     * 
      * @param index the index of the expansion URL. This value will be either
      *            MAIN_FILE_URL_INDEX or PATCH_FILE_URL_INDEX
      * @param URL the URL to set
@@ -395,20 +377,39 @@ public class APKExpansionPolicy implements Policy {
         return false;
     }
 
-    private Map<String, String> decodeExtras(
-        com.google.android.vending.licensing.ResponseData rawData) {
+    private Map<String, String> decodeExtras(String extras) {
         Map<String, String> results = new HashMap<String, String>();
-        if (rawData == null) {
-            return results;
-        }
-
         try {
-            URI rawExtras = new URI("?" + rawData.extra);
-            URIQueryDecoder.DecodeQuery(rawExtras, results);
+            URI rawExtras = new URI("?" + extras);
+            Map<String, String> extraList = splitQuery(new URL(rawExtras.toString()));
+            for (Map.Entry<String, String> entry : extraList.entrySet())
+            {
+                String name = entry.getKey();
+                int i = 0;
+                while (results.containsKey(name)) {
+                    name = entry.getKey() + ++i;
+                }
+                results.put(name, entry.getValue());
+            }
         } catch (URISyntaxException e) {
             Log.w(TAG, "Invalid syntax error while decoding extras data from server.");
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
         }
         return results;
+    }
+
+    public static Map<String, String> splitQuery(URL url) throws UnsupportedEncodingException {
+        Map<String, String> query_pairs = new LinkedHashMap<String, String>();
+        String query = url.getQuery();
+        String[] pairs = query.split("&");
+        for (String pair : pairs) {
+            int idx = pair.indexOf("=");
+            query_pairs.put(URLDecoder.decode(pair.substring(0, idx), "UTF-8"), URLDecoder.decode(pair.substring(idx + 1), "UTF-8"));
+        }
+        return query_pairs;
     }
 
 }
